--- a/contacto.html
+++ b/contacto.html
@@ -4,78 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto - Actas Info</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Source+Sans+Pro:wght@300;400;600&family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="css/styles.css">
-    <style>
-        .contact-section {
-            background-color: var(--color-white);
-            border-radius: 15px;
-            overflow: hidden;
-            margin-bottom: 40px;
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-            padding: 30px;
-        }
-
-        .contact-info {
-            background-color: rgba(23, 162, 184, 0.1);
-            border-radius: 10px;
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        .contact-info i {
-            color: var(--color-sapphire);
-            font-size: 1.5em;
-            margin-bottom: 10px;
-        }
-
-        .contact-form .form-control {
-            border-radius: 8px;
-            border: 1px solid rgba(0, 87, 163, 0.2);
-            padding: 12px;
-            margin-bottom: 15px;
-        }
-
-        .contact-form .form-control:focus {
-            border-color: var(--color-sapphire);
-            box-shadow: 0 0 0 0.2rem rgba(0, 87, 163, 0.25);
-        }
-
-        .contact-form textarea {
-            min-height: 150px;
-        }
-
-        .contact-form .btn-primary {
-            padding: 12px 30px;
-            font-weight: 600;
-        }
-
-        .info-card {
-            text-align: center;
-            padding: 20px;
-            margin-bottom: 20px;
-            transition: transform 0.3s ease;
-        }
-
-        .info-card:hover {
-            transform: translateY(-5px);
-        }
-
-        .info-card i {
-            font-size: 2em;
-            margin-bottom: 15px;
-            color: var(--color-sapphire);
-        }
-    </style>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
+    <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Actas Info</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -93,7 +31,7 @@
                         <a class="nav-link" href="errores.html">Errores</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contacto.html">Contacto</a>
+                        <a class="nav-link active" href="contacto.html">Contacto</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">Sobre Nosotros</a>
@@ -109,7 +47,7 @@
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
                     <h1>Contacto</h1>
-                    <p class="lead">¿Tienes dudas sobre documentos oficiales? Estamos aquí para ayudarte</p>
+                    <p class="lead">Estamos aquí para ayudarte con información sobre trámites de documentos oficiales</p>
                 </div>
             </div>
         </div>
@@ -117,96 +55,93 @@
 
     <!-- Main Content -->
     <div class="container">
-        <div class="row">
-            <!-- Contact Information -->
-            <div class="col-md-4">
-                <div class="contact-section">
-                    <h2 class="mb-4">Información de Contacto</h2>
-                    
-                    <div class="info-card">
-                        <i class="fas fa-clock"></i>
-                        <h4>Horario de Atención</h4>
-                        <p>Lunes a Viernes<br>9:00 AM - 5:00 PM</p>
-                    </div>
-
-                    <div class="info-card">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <h4>Ubicación</h4>
-                        <p>Ciudad de México<br>México</p>
-                    </div>
-
-                    <div class="contact-info-item">
-                        <i class="fas fa-envelope"></i>
-                        <h3>Correo Electrónico</h3>
-                        <p>info@actas-info.com</p>
-                    </div>
-                    <div class="contact-info-item">
-                        <i class="fas fa-phone"></i>
-                        <h3>Teléfono</h3>
-                        <p>+52 (55) 9179-6700</p>
+        <div class="row mt-5">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center mb-4">
+                            <i class="fas fa-phone-alt fa-2x text-primary me-3"></i>
+                            <div>
+                                <h3 class="card-title h4">Teléfono</h3>
+                                <p class="card-text mb-0">+52 (55) 9179-6700</p>
+                            </div>
+                        </div>
+                        <p class="card-text text-muted">
+                            Horario de atención:<br>
+                            Lunes a Viernes: 9:00 - 18:00<br>
+                            Sábado: 9:00 - 13:00
+                        </p>
                     </div>
                 </div>
             </div>
 
-            <!-- Contact Form -->
-            <div class="col-md-8">
-                <div class="contact-section">
-                    <h2 class="mb-4">Envíanos un Mensaje</h2>
-                    <form class="contact-form">
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="name">Nombre</label>
-                                    <input type="text" class="form-control" id="name" placeholder="Tu nombre">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="email">Correo Electrónico</label>
-                                    <input type="email" class="form-control" id="email" placeholder="tu@email.com">
-                                </div>
+            <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center mb-4">
+                            <i class="fas fa-envelope fa-2x text-primary me-3"></i>
+                            <div>
+                                <h3 class="card-title h4">Correo Electrónico</h3>
+                                <p class="card-text mb-0">info@actas-info.com</p>
                             </div>
                         </div>
+                        <p class="card-text text-muted">
+                            Respondemos todos los correos dentro de las 24 horas hábiles.
+                        </p>
+                    </div>
+                </div>
+            </div>
 
-                        <div class="form-group">
-                            <label for="subject">Asunto</label>
-                            <input type="text" class="form-control" id="subject" placeholder="Asunto de tu mensaje">
+            <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center mb-4">
+                            <i class="fas fa-map-marker-alt fa-2x text-primary me-3"></i>
+                            <div>
+                                <h3 class="card-title h4">Ubicación</h3>
+                                <p class="card-text mb-0">Ciudad de México, México</p>
+                            </div>
                         </div>
+                        <p class="card-text text-muted">
+                            Servicio de información en línea para toda la República Mexicana
+                        </p>
+                    </div>
+                </div>
+            </div>
 
-                        <div class="form-group">
-                            <label for="message">Mensaje</label>
-                            <textarea class="form-control" id="message" rows="5" placeholder="Escribe tu mensaje aquí"></textarea>
+            <div class="col-md-6 mb-4">
+                <div class="card h-100">
+                    <div class="card-body">
+                        <div class="d-flex align-items-center mb-4">
+                            <i class="fas fa-info-circle fa-2x text-primary me-3"></i>
+                            <div>
+                                <h3 class="card-title h4">Información Importante</h3>
+                            </div>
                         </div>
-
-                        <button type="submit" class="btn btn-primary">
-                            <i class="fas fa-paper-plane me-2"></i>Enviar Mensaje
-                        </button>
-                    </form>
+                        <p class="card-text text-muted">
+                            Somos un servicio informativo independiente. Para trámites oficiales, te recomendamos contactar directamente con las oficinas del Registro Civil correspondientes.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <footer>
+    <footer class="footer mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
                     <h5>Actas Info</h5>
                     <p>Tu guía confiable para documentos oficiales en México.</p>
-                    <div class="social-links mt-3">
-                        <a href="#" class="me-3"><i class="fab fa-facebook"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-twitter"></i></a>
-                        <a href="#" class="me-3"><i class="fab fa-instagram"></i></a>
-                    </div>
                 </div>
                 <div class="col-md-4">
                     <h5>Enlaces Rápidos</h5>
                     <ul class="list-unstyled">
-                        <li><a href="index.html"><i class="fas fa-home me-2"></i>Inicio</a></li>
                         <li><a href="certificados.html"><i class="fas fa-file-alt me-2"></i>Certificados</a></li>
-                        <li><a href="plazos.html"><i class="fas fa-clock me-2"></i>Plazos de Entrega</a></li>
-                        <li><a href="errores.html"><i class="fas fa-exclamation-triangle me-2"></i>Corrección de Errores</a></li>
+                        <li><a href="plazos.html"><i class="fas fa-clock me-2"></i>Plazos</a></li>
+                        <li><a href="errores.html"><i class="fas fa-exclamation-triangle me-2"></i>Errores</a></li>
+                        <li><a href="contacto.html"><i class="fas fa-envelope me-2"></i>Contacto</a></li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -220,6 +155,7 @@
         </div>
     </footer>
 
+    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
