--- a/privacy.html
+++ b/privacy.html
@@ -7,11 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <style>
-        body {
-            padding-top: 150px; /* Ajusta el valor si es necesario */
-        }
-    </style>
 </head>
 <body>
     <!-- Navigation -->
@@ -47,7 +42,7 @@
     </nav>
 
     <!-- Header -->
-    <header class="header-section">
+    <section class="hero-section">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 mx-auto text-center">
@@ -56,7 +51,7 @@
                 </div>
             </div>
         </div>
-    </header>
+    </section>
 
     <!-- Main Content -->
     <div class="container">
