--- a/terms.html
+++ b/terms.html
@@ -41,12 +41,20 @@
         </div>
     </nav>
 
+    <section class="hero-section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 mx-auto text-center">
+                    <h1>Términos y Condiciones</h1>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Main Content -->
     <div class="container mt-5 pt-5">
         <div class="row">
-            <div class="col-lg-8 mx-auto">
-                <h1 class="text-center mb-4">Términos y Condiciones</h1>
-                
+            <div class="col-lg-8 mx-auto">                
                 <!-- Introduction -->
                 <section class="mb-5">
                     <h2>1. Introducción</h2>
