--- a/privacy.html
+++ b/privacy.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top">
+    <nav class="navbar navbar-expand-lg bg-primary fixed-top">
         <div class="container">
             <a class="navbar-brand" href="index.html">Actas Info</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
