--- a/about.html
+++ b/about.html
@@ -248,6 +248,18 @@
         </div>
     </footer>
 
+    <!-- Cookie Consent -->
+    <div class="cookie-consent" id="cookieConsent">
+        <div class="cookie-content">
+            <h3><i class="fas fa-cookie-bite me-2"></i>Uso de Cookies</h3>
+            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra <a href="privacy.html">política de privacidad</a> y nuestros <a href="terms.html">términos y condiciones</a>.</p>
+            <button id="acceptCookies" class="btn btn-primary">
+                <i class="fas fa-check me-2"></i>Aceptar
+            </button>
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/main.js"></script>
 </body>
