--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <div class="cookie-consent" id="cookieConsent">
         <div class="cookie-content">
             <h3><i class="fas fa-cookie-bite me-2"></i>Uso de Cookies</h3>
-            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web.</p>
+            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra <a href="privacy.html">política de privacidad</a> y nuestros <a href="terms.html">términos y condiciones</a>.</p>
             <button id="acceptCookies" class="btn btn-primary">
                 <i class="fas fa-check me-2"></i>Aceptar
             </button>
