--- a/terms.html
+++ b/terms.html
@@ -142,10 +142,13 @@
     </footer>
 
     <!-- Cookie Consent -->
-    <div class="cookie-consent">
+    <div class="cookie-consent" id="cookieConsent">
         <div class="cookie-content">
-            <p>Utilizamos cookies para mejorar su experiencia. Al continuar navegando, acepta nuestra <a href="privacy.html">política de privacidad</a>.</p>
-            <button id="acceptCookies" class="btn btn-primary">Aceptar</button>
+            <h3><i class="fas fa-cookie-bite me-2"></i>Uso de Cookies</h3>
+            <p>Utilizamos cookies para mejorar tu experiencia en nuestro sitio web. Al continuar navegando, aceptas nuestra <a href="privacy.html">política de privacidad</a> y nuestros <a href="terms.html">términos y condiciones</a>.</p>
+            <button id="acceptCookies" class="btn btn-primary">
+                <i class="fas fa-check me-2"></i>Aceptar
+            </button>
         </div>
     </div>
 
